--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
 	<title>MetaBizzare | Contact</title>
 
 	<!-- Start Normalize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 
 	<!-- Start Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/contact.css">
+	<link rel="stylesheet" type="text/css" href="contact.css">
 
 	<!-- Start Global CSS -->
-	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="stylesheet" type="text/css" href="global.css">
 
 
 
@@ -20,7 +20,7 @@
 
 	<header>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<nav>
 			<a href="index.html">Home</a>
@@ -54,7 +54,7 @@
 
 	<footer>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<p id="footer">© Copyright 2021. All Rights Reserved. | MetaBizzare</p>
 
