--- a/gatetoppers.html
+++ b/gatetoppers.html
@@ -5,20 +5,20 @@
 	<title>MetaBizzare | Gate Toppers</title>
 
 	<!-- Start Normalize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 
 	<!-- Start Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/learntech.css">
+	<link rel="stylesheet" type="text/css" href="learntech.css">
 
 	<!-- Start Global CSS -->
-	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="stylesheet" type="text/css" href="global.css">
 
 </head>
 <body>
 
 	<header>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<nav>
 			<a href="index.html">Home</a>
@@ -42,32 +42,32 @@
 
 		<div class="learntechnow">
 
-			<img src="img/1.jpg">
+			<img src="1.jpg">
 
 		</div>
 
 		<div class="learntechpodcast">
 
-			<img src="img/2.jpg">
+			<img src="2.jpg">
 
 		</div>
 
 		<div class="learntechblog">
 
-			<img src="img/3.jpg">
+			<img src="3.jpg">
 
 		</div>
 
 		<div class="4">
 
-			<img src="img/4.jpg">
+			<img src="4.jpg">
 
 		</div>
 	</section>
 
 	<footer>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<p id="footer">© Copyright 2021. All Rights Reserved. | MetaBizzare</p>
 
