--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 	<title>MetaBizzare | Home</title>
 
 	<!-- Start Normalize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 
 	<!-- Start Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/home.css">
+	<link rel="stylesheet" type="text/css" href="home.css">
 
 	<!-- Start Global CSS -->
-	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="stylesheet" type="text/css" href="global.css">
 
 </head>
 <body>
 
 	<header>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<nav>
 			<a href="index.html">Home</a>
@@ -46,7 +46,7 @@
 		</section>
 
 
-		<img id="slide" src="img/background.jpg">
+		<img id="slide" src="background.jpg">
 
 	</section>
 
@@ -56,7 +56,7 @@
 
 		<div class="course">
 
-			<img src="img/course-01.jpg">
+			<img src="course-01.jpg">
 
 			<center><h2>Metallurgy For Beginners</h2></center>
 
@@ -68,7 +68,7 @@
 
 		<div class="course2">
 
-			<img src="img/course-02.jpg">
+			<img src="course-02.jpg">
 
 			<center><h2>Metallurgy For Gate Preparation...</h2></center>
 
@@ -80,7 +80,7 @@
 
 		<div class="course3">
 
-			<img src="img/course-03.jpg">
+			<img src="course-03.jpg">
 
 			<center><h2>Interview Preparation</h2></center>
 
@@ -179,7 +179,7 @@
 
 	<footer>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<p id="footer">© Copyright 2021. All Rights Reserved. | MetaBizzare</p>
 
