--- a/resources.html
+++ b/resources.html
@@ -5,20 +5,20 @@
 	<title>MetaBizzare | Resources</title>
 
 	<!-- Start Normalize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 
 	<!-- Start Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="css/premiumplus.css">
+	<link rel="stylesheet" type="text/css" href="premiumplus.css">
 
 	<!-- Start Global CSS -->
-	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="stylesheet" type="text/css" href="global.css">
 
 </head>
 <body>
 
 	<header>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<nav>
 			<a href="index.html">Home</a>
@@ -92,7 +92,7 @@
 
 	<footer>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<p id="footer">© Copyright 2021. All Rights Reserved. | MetaBizzare</p>
 
