--- a/techsupport.html
+++ b/techsupport.html
@@ -5,20 +5,20 @@
 	<title>MetaBizzare | Tech Support</title>
 
 	<!-- Start Normalize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 
 	<!-- Start Tech Support CSS -->
-	<link rel="stylesheet" type="text/css" href="css/techsupport.css">
+	<link rel="stylesheet" type="text/css" href="techsupport.css">
 
 	<!-- Start Global CSS -->
-	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="stylesheet" type="text/css" href="global.css">
 
 </head>
 <body>
 
 	<header>
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<nav>
 			<a href="index.html">Home</a>
@@ -39,7 +39,7 @@
 
 		<div class="computersupport">
 
-			<img id="computer" src="img/course-01.jpg">
+			<img id="computer" src="course-01.jpg">
 
 			<div class="text">
 				<h1>Student Mentor Support</h1>
@@ -53,7 +53,7 @@
 
 		<div class="computersupport2">
 
-			<img id="computer2" src="img/course-01.jpg">
+			<img id="computer2" src="course-01.jpg">
 
 			<div class="text2">
 				<h1>Core Concept Developments</h1>
@@ -67,7 +67,7 @@
 
 		<div class="computersupport3">
 
-			<img id="computer3" src="img/course-01.jpg">
+			<img id="computer3" src="course-01.jpg">
 
 			<div class="text3">
 				<h1>Advanced Technical Apti. Development</h1>
@@ -88,7 +88,7 @@
 
 	<footer id="techsupport">
 
-		<img id="logo" src="img/logo.png">
+		<img id="logo" src="logo.png">
 
 		<p id="footer">© Copyright 2021. All Rights Reserved. | MetaBizzare</p>
 
